--- a/WpfCritic/WpfCritic/View/EditOrAddSongInEntertainmentWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EditOrAddSongInEntertainmentWindow.xaml
@@ -20,7 +20,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Album}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF00167C" FontFamily="Impact" FontSize="21.333" />
+            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Album.ToStringWithAlbumAuthors}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF00167C" FontFamily="Impact" FontSize="21.333" />
             <local:SongUserControl Grid.Row="1" Grid.Column="0" x:Name="Songs" DataContext="{Binding SongViewModel}" />
             <Button Name="addButton" Grid.Row="1" Grid.Column="1" IsEnabled="{Binding SongViewModel.WhenSelectedButtonEnabled}" Padding="4,2,4,2" Width="50" Height="30" Content=">>>" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" FontSize="18.667" Click="addButton_Click" />
             <Grid Grid.Row="1" Grid.Column="2">
