--- a/WpfCritic/WpfCritic/View/EditOrAddPerformerWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EditOrAddPerformerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
-        Title="Додатковий контент" Height="371" Width="521">
+        Title="Додатковий контент" Height="371" Width="521" MinHeight="371" MinWidth="521">
     <Grid Background="AliceBlue">
         <Grid Margin="4,8,4,8">
             <Grid.RowDefinitions>
