--- a/WpfCritic/WpfCritic/View/EditOrAddPerformerInEntertainmentWindow.xaml
+++ b/WpfCritic/WpfCritic/View/EditOrAddPerformerInEntertainmentWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCritic.View"
         mc:Ignorable="d"
-        Title="Додатковий контент головного контенту" Height="711.951" Width="971.857" MinHeight="711.951" MinWidth="971.857">
+        Title="Додатковий контент головного контенту" Height="711.951" Width="971.857" MinHeight="711.951" MinWidth="971.857" ResizeMode="NoResize">
     <Grid Background="AliceBlue">
         <Grid Margin="4,8,4,8">
             <Grid.RowDefinitions>
